--- a/login.html
+++ b/login.html
@@ -12,20 +12,84 @@
 <body>
     <section id="login">
         <div class="wrapper-login">
-            <div class="first-column">
+            <div class="sign-up-container">
                 <div class="sidebar">
-                    <div class="sidebar-content">
+                    <div class="sidebar-content register">
                         <h1>Bem-vindo<br>de volta!
                             <p>Não tem uma conta? <b>Registre-se</b> agora e começe a focar!</p>
                         </h1>
-                        <button class="register-sidebar-button">Registrar-se</button>
                     </div>
                 </div>
+                <div class="sign-up-button" onclick="toggleForm()">
+                    <span class="material-symbols-rounded">
+                        chevron_right
+                    </span>
+                </div>
+                    <div class="form-content" id="form">
+                        <img src="./imgs/foca_branco.svg" alt="">
+                        <h1>Criar Conta</h1>
+                        <div class="social-icons">
+                            <a href="#" class="social-icon"><i class="fa-brands fa-google"></i></a>
+                            <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <div class="input-form username">
+                            <input type="text" class="input-field" id="nickname" placeholder=" " />
+                            <label for="" class="input-label">
+                                <span class="label-name">Nome</span>
+                                <span class="underline"></span>
+                            </label>
+                        </div>
+                        <div class="input-form email">
+                            <input type="email" class="input-field" id="email" placeholder=" " />
+                            <label for="" class="input-label">
+                                <span class="label-name">Email</span>
+                                <span class="underline"></span>
+                            </label>
+                        </div>
+                        <div class="input-form password">
+                            <input type="password" class="input-field" id="senha-register" placeholder=" " />
+                            <label for="" class="input-label">
+                                <span class="label-name">Senha</span>
+                                <span class="underline"></span>
+                                <span class="visible material-symbols-rounded visibility" onclick="toggleSenha('senha-register', this)">visibility</span>
+                                <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha('senha-register', this)">visibility_off</span>
+                            </label>
+                        </div>
+                        <div class="input-form password">
+                            <input type="password" class="input-field" id="senha-confirm" placeholder=" " />
+                            <label for="" class="input-label">
+                                <span class="label-name">Confirmar Senha</span>
+                                <span class="underline"></span>
+                                <span class="visible material-symbols-rounded visibility" onclick="toggleSenha('senha-confirm', this)">visibility</span>
+                                <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha('senha-confirm', this)">visibility_off</span>
+                            </label>
+                        </div>
+                        <div class="input-form">
+                            <button disabled onclick="submitLogin()" class="input-button login-button" type="submit">
+                                <div class="progress-fill">
+                                    <div class="progress-fill-text">Registrar</div>
+                                </div>
+                            </button>
+                        </div>
+                    </div>               
             </div>
-            <div class="form-container">
+            <div class="sign-in-container">
+                <div class="sidebar">
+                    <div class="sidebar-content login">
+                        <h1>Seja<br>bem vindo!
+                            <p>Já tem uma conta? Faça login e volte a focar!</p>
+                        </h1>
+                    </div>
+                </div>
                 <div class="form-content" id="form">
                     <img src="./imgs/foca.svg" alt="">
                     <h1>Login</h1>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fa-brands fa-google"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
                     <div class="input-form email">
                         <input type="email" class="input-field" id="email" placeholder=" " />
                         <label for="" class="input-label">
@@ -34,12 +98,12 @@
                         </label>
                     </div>
                     <div class="input-form password">
-                        <input type="password" class="input-field" id="senha" placeholder=" " />
+                        <input type="password" class="input-field" id="senha-login" placeholder=" " />
                         <label for="" class="input-label">
                             <span class="label-name">Senha</span>
                             <span class="underline"></span>
-                            <span class="visible material-symbols-rounded visibility" onclick="toggleSenha()">visibility</span>
-                            <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha()">visibility_off</span>
+                            <span class="visible material-symbols-rounded visibility" onclick="toggleSenha('senha-login', this)">visibility</span>
+                            <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha('senha-login', this)">visibility_off</span>
                         </label>
                     </div>
                     <div class="input-form">
@@ -53,7 +117,7 @@
                         </button>
                     </div>
                     <a class="esqueci-senha" href="./">Esqueceu a senha?</a>
-                </div>
+                </div>               
             </div>
         </div>
         <div class="waves">
@@ -65,4 +129,5 @@
     </section>
 </body>
 <script src="./scripts/login.js"></script>
+<script src="https://kit.fontawesome.com/c27d52a16d.js" crossorigin="anonymous"></script>
 </html>
