--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <section id="header">
         <div class="title-container">
             <a class="header-title" href="./">
-                <img src="./imgs/foca_texto_branco.png" alt="logo-foca">
+                <img src="https://github.com/rober122pst/website-foca/blob/main/imgs/foca_texto_branco.png?raw=true" alt="logo-foca">
             </a>
         </div>
         
-        <div class="nav">
-            <nav class="navbar">
-                <ul class="navbar-links">
-                    <li>
-                        <a href="#about">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="#about">Benefícios</a>
-                    </li>             
-                    <li>
-                        <a href="#about">Funcionalidades</a>
-                    </li>             
-                </ul>
-            </nav>
-        </div>
 
+        <nav class="navbar">
+            <ul class="navbar-links">
+                <li>
+                    <a href="#start-now">Início</a>
+                </li>
+                <li>
+                    <a href="#about">Sobre</a>
+                </li>
+                <li>
+                    <a href="#about">Benefícios</a>
+                </li>             
+                <li>
+                    <a href="#about">Funcionalidades</a>
+                </li>             
+            </ul>
+        </nav>
         <div class="cta-container">
-            <div class=""></div>
             <a href="./login.html" class="signup-button cta-button invert"></a>
         </div>     
     </section>
@@ -50,7 +50,7 @@
             <a href="./" class="cta-button invert"></a>
         </div>
         <div class="hero-image-container">
-            <img src="./imgs/alvo.png">
+            <img src="https://github.com/rober122pst/website-foca/blob/main/imgs/alvo.png?raw=true">
         </div>
     </section>
 
@@ -68,8 +68,8 @@
     </section>
 
     
-    <script src="./scripts/main.js"></script>
-    <script src="./scripts/finisher-header.es5.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
+    <script src="finisher-header.es5.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         new FinisherHeader({
           "count": 10,
@@ -106,6 +106,6 @@
             "c"
           ]
         });
-        </script>
+    </script>
 </body>
 </html>
