--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </section>
 
     
-    <script src="script.js"></script>
-    <script src="finisher-header.es5.min.js" type="text/javascript"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/finisher-header.es5.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         new FinisherHeader({
           "count": 10,
