--- a/auth/login.html
+++ b/auth/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Foca</title>
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
     <title>Login</title>
+    <link rel="shortcut icon" href="./imgs/foca_branco.svg" type="image/x-icon">
 </head>
 <body>
     <section id="login">
@@ -66,6 +66,10 @@
                                 <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha('senha-confirm', this)">visibility_off</span>
                             </label>
                         </div>
+                        <h3 id="response-register"></h3>
+                        <div class="input-form check">
+                            <label class="input-check"><input type="checkbox" class="remember" id="termos-servicos"/> Aceitar <a href="" style="text-decoration: none; color: #0098db">Termos e Condições</a></label>
+                        </div>
                         <div class="input-form">
                             <button disabled onclick="submitRegister()" class="input-button login-button" type="submit">
                                 <div class="progress-fill">
@@ -84,7 +88,6 @@
                     </div>
                 </div>
                 <div class="form-content" id="form">
-                    <h3 id="response">oi</h3>
                     <img src="../imgs/foca.svg" alt="">
                     <h1>Login</h1>
                     <div class="social-icons">
@@ -108,7 +111,8 @@
                             <span class="invisible material-symbols-rounded visibility-off" onclick="toggleSenha('senha-login', this)">visibility_off</span>
                         </label>
                     </div>
-                    <div class="input-form">
+                    <h3 id="response-login"></h3>
+                    <div class="input-form check">
                         <label class="input-check"><input type="checkbox" class="remember" id="remember-me"/> Manter logado</label>
                     </div>
                     <div class="input-form">
