--- a/auth/login.html
+++ b/auth/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
     <title>Login</title>
-    <link rel="shortcut icon" href="./imgs/foca_branco.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imgs/foca_branco.svg" type="image/x-icon">
 </head>
 <body>
     <section id="login">
