--- a/auth/verify.html
+++ b/auth/verify.html
@@ -4,33 +4,119 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Foca - Verificar Email</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=forward_to_inbox" />
   <style>
+    @import url('../styles/cores.css');
     body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: var(--bg-second);
+    }
+
+    #container {
+      background-color: var(--bg-primary);
+      width: 800px;
+      height: 600px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      background-color: #f7f7f7;
+      padding: 0 3rem;
+      border-radius: 20px;
     }
 
-    .msg {
-      font-size: 1.5rem;
-      color: #333;
+    #container h1 {
+      font-size: 2rem;
+      margin: 20px 0;
     }
 
-    .success {
-      color: green;
+    #container p {
+      font-size: 1.2rem;
+      margin: 10px 0;
     }
 
-    .error {
-      color: red;
+    #container span {
+      color: var(--color-items-primary);
+      font-weight: bold;
     }
+
+    #container .material-symbols-rounded {
+      display: flex;
+      font-size: 2rem;
+      color: var(--text-light);
+      background: var(--accent);
+      padding: 1.3rem;
+      border-radius: 50%;
+    }
+
+    .cta-button {
+      cursor: pointer;
+      border: none;
+      width: fit-content;
+
+      background: linear-gradient(180deg, var(--color-items-primary), var(--color-items-second));
+      
+      border-radius: 0.5rem;
+      z-index: 1;
+      position: relative;
+      overflow: hidden;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      padding: 12px;
+
+      text-decoration: none;
+
+      &:before {
+          content: "REENVIAR EMAIL DE VERIFICAÇÃO";
+          white-space: nowrap;
+          text-align: center;
+          color: var(--text-light);
+          font-family: "Nunito", sans-serif;
+          font-size: 18px;
+          font-weight: 800;
+      }
+
+      &:after{
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 0%;
+          background: var(--accent);
+          z-index: -1;
+          transition: 300ms ease;
+          border-radius: .5rem;
+      }
+
+      &:hover {
+          &:after{
+              height: 100%;
+          }
+      }
+
+      .cta-button.btn-verify {
+        &:before {
+          content: "FAZER LOGIN";
+        }
+      }
+  }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div id="container">
+    <span class="material-symbols-rounded">
+      <i class="fa-solid fa-envelope"></i>
+    </span>
     <h1>Por favor, verifique seu email</h1>
     <p>
-      Um email de verificação foi enviado para <span><strong>
+      Um email de verificação foi enviado para <br><span><strong>
         <script>
           const urlParams = new URLSearchParams(window.location.search);
           const email = localStorage.getItem('lastRegisteredEmail') || urlParams.get('lastRegisteredEmail') || 'email não encontrado';
@@ -39,40 +125,110 @@
       </strong></span>
     </p>
     <p>
-      Clique no link de verificação para ativar sua conta. Se você não receber o email, verifique sua caixa de spam.
+      Clique no link de verificação para ativar sua conta. Não esqueça de verificar sua caixa de spam.
     </p>
     <p>
       Não encontra o email?
     </p>
-    <button onclick="resendEmail()" class="btn btn-primary">
-      Reenviar email de verificação
+    <button onclick="resendEmail()" class="cta-button">
     </button>
-    <p id="msg" class="msg"></p>
   </div>
 
 
+
+  
+  <script src="https://kit.fontawesome.com/c27d52a16d.js"></script>
   <script>
+    const API_URL = 'http://localhost:3000/auth';
+    window.addEventListener('DOMContentLoaded', async () => {
+      const email = localStorage.getItem('lastRegisteredEmail'); // você salva o email lá no login/cadastro
+      if (!email) {
+        // Sem e-mail no localStorage? Vaza!
+        window.location.href = 'login.html';
+        return;
+      }
+
+      try {
+        const res = await fetch(`${API_URL}/check-verification`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email }),
+        });
+
+        const data = await res.json();
+
+        if (data.error || data.notFound || data.verified) {
+          // Conta apagada, não encontrada ou já verificada = volta pro login/dashboard
+          window.location.href = data.verified ? '../dashboard.html' : 'login.html';
+        }
+      } catch (e) {
+        console.error('Erro ao verificar status do e-mail', e);
+        // Evita travar a página
+      }
+    });
+
+    async function verifyEmail() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const token = urlParams.get('token');
+        const message = document.getElementById('msg')
+        const description = document.getElementById('description')
+
+        if(!token) {
+            message.textContent = 'Token não encontrado'
+            return
+        }
+
+        try {
+            const res = await fetch(`http://localhost:3000/auth/verify?token=${token}`)
+            const text = await res.text()
+
+            if(res.ok) {
+                message.textContent = text;
+                description.textContent = `Sua conta foi ativada com sucesso. Você já pode fazer login e começar a focar!\n\nSe não for redirecionado, clique no botão abaixo.`
+                localStorage.removeItem('lastRegisteredEmail')
+                setTimeout(() => {
+                    window.location.href = 'login.html';
+                }, 3000);
+            }else {
+                message.textContent = text;
+                description.textContent = 'Sua conta não foi encontrada. Por favor, registre-se novamente.'
+            }
+        } catch(err) {
+            message.textContent = "Erro ao conectar com o servidor."
+        }
+    }
+    if (urlParams.has('token')) {
+      fetch('verify-email.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('container').innerHTML = html;
+          verifyEmail();
+        })
+        .catch(error => {
+          console.error('Erro ao carregar a página:', error);
+        });
+    }
     async function resendEmail() {
       const email = localStorage.getItem('lastRegisteredEmail');
       const msg = document.getElementById('msg');
-
+  
       if (!email) {
         msg.textContent = 'E-mail não encontrado.';
         msg.style.color = 'red';
         return;
       }
-
+  
       try {
         const res = await fetch('http://localhost:3000/auth/resend-verification', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email })
         });
-
+  
         const data = await res.json();
         msg.textContent = data.message || data.error;
         msg.style.color = res.ok ? 'green' : 'red';
-
+  
       } catch (err) {
         msg.textContent = 'Erro ao reenviar o e-mail.';
         msg.style.color = 'red';
