feat: redefinir senha (back e frontend)

--- a/auth/verify-email.html
+++ b/auth/verify-email.html
@@ -5,7 +5,7 @@
 <p id="description">
     Sua conta foi ativada com sucesso. Você já pode fazer login e começar a focar!<br><br>Se não for redirecionado, clique no botão abaixo.
 </p>
-<button class="cta-button"></button>
+<button onclick="irLogin()" class="cta-button"></button>
 
 <style>
     .cta-button {
