--- a/auth/login.html
+++ b/auth/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
-    <title>Login</title>
+    <title>Login - Foca</title>
     <link rel="shortcut icon" href="../imgs/foca_branco.svg" type="image/x-icon">
 </head>
 <body>
@@ -122,7 +122,7 @@
                             </div>
                         </button>
                     </div>
-                    <a class="esqueci-senha" href="./">Esqueceu a senha?</a>
+                    <a class="esqueci-senha" href="./forgot.html">Esqueceu a senha?</a>
                 </div>               
             </div>
         </div>
@@ -133,7 +133,7 @@
             <div class="wave wave4"></div>
         </div>
     </section>
-    <script src="../scripts/login.js?v=1.2" type="text/javascript"></script>
+    <script src="../scripts/auth/login.js?v=1.1" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/c27d52a16d.js" crossorigin="anonymous"></script>
 </body>
 </html>
