--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -6,6 +6,7 @@
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales-all.global.min.js"></script>
     <link rel="stylesheet" href="./styles/calendar.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
   </head>
   <body>
     <div class="sidebar-container">
@@ -15,17 +16,62 @@
         </div>
         <nav class="navbar">
           <ul class="navbar-links">
-            <li>Dashboard</li>
-            <li>Rotina</li>
-            <li>Tarefas</li>
-            <li>Progresso</li>
+            <li><i class="fa-solid fa-chart-line"></i>Overview</li>
+            <li><i class="fa-solid fa-calendar"></i>Rotina</li>
+            <li><i class="fa-solid fa-list-check"></i>Tarefas</li>
+            <li><i class="fa-solid fa-hourglass-half"></i>Podomoro</li>
+            <li><i class="fa-solid fa-brain"></i>Focão AI</li>
+          </ul>
+        </nav>
+        <div class="divider"></div>
+        <nav class="navbar-insights">
+          <ul class="navbar-links">
+            <li><i class="fa-solid fa-gear"></i>Configurações</li>
+            <li><i class="fa-solid fa-right-from-bracket"></i>Sair</li>
           </ul>
         </nav>
       </div>
     </div>
     <div class="site-container">
+      <header class="header">
+        <div class="first-header">
+            <div class="section-info">
+                <h3>Olá <strong>Rober122</strong>,</h3>
+                <h1>Rotina</h1>
+            </div>
+            <div class="profile-container">
+                <div class="stats">
+                    <div class="container">
+                        <span class="material-symbols-rounded">paid</span><p>28.50 $</p>
+                    </div>
+                    <div class="container">
+                        <span class="material-symbols-rounded">star</span>
+                        <div class="progress-bar-xp">
+                            <div class="progress-fill-xp"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <img src="./imgs/dashboard/rober.png" alt="" class="profile-pic">
+                </div>
+            </div>
+        </div>
+        <div class="art-section">
+            <div class="art-content">
+                <div class="texts">
+                    <h2>Crie sua rotina</h2>
+                    <p>Use nossa IA para criar sua rotina. Você pode também pode criar cards únicos.</p>
+                </div>
+                <button class="cta-button"></button>
+            </div>
+            <div class="image">
+                <img src="./imgs/dashboard/SPORTRECIFE.gif" alt="" class="art">
+            </div>
+        </div>
+      </header>
       <div id='calendar'></div>
     </div>
     <script src="./scripts/calendar-routine.js"></script>
+    <script src="https://kit.fontawesome.com/c27d52a16d.js" crossorigin="anonymous"></script>
   </body>
 </html>
