--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -69,7 +69,13 @@
             </div>
         </div>
       </header>
-      <div id='calendar'></div>
+      <div class="container-calendar">
+        <div id='calendar'></div>
+        <div class="header-calendar">
+          <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
+          <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
+        </div>
+      </div>
     </div>
     <script src="./scripts/calendar-routine.js"></script>
     <script src="https://kit.fontawesome.com/c27d52a16d.js" crossorigin="anonymous"></script>
