--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -71,9 +71,17 @@
       </header>
       <div class="container-calendar">
         <div id='calendar'></div>
-        <div class="header-calendar">
-          <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
-          <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
+        <div class="sidebar-calendar">
+          <div class="header-calendar">
+            <div class="header-buttons">
+              <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
+              <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+            <div class="title">
+              24 jan. 2025
+            </div>
+          </div>
+          <div class="routines-container"></div>
         </div>
       </div>
     </div>
