--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -72,16 +72,81 @@
       <div class="container-calendar">
         <div id='calendar'></div>
         <div class="sidebar-calendar">
-          <div class="header-calendar">
-            <div class="header-buttons">
-              <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
-              <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
+            <div class="header-calendar">
+                <b>Rotinas</b>
             </div>
-            <div class="title">
-              24 jan. 2025
-            </div>
+          <div class="routines-container">
+                <div class="routine">
+                    <b>Titulo da Rotina</b>
+                    <em>Aqui vai a descrição da rotina</em>
+                    <div class="semanas">
+                      <span>D</span>
+                      <span>S</span>
+                      <span>T</span>
+                      <span>Q</span>
+                      <span>Q</span>
+                      <span>S</span>
+                      <span>S</span>
+                    </div>
+                    <small>07:00</small>
+                </div>
+                <div class="routine">
+                    <b>Titulo da Rotina</b>
+                    <em>Aqui vai a descrição da rotina</em>
+                    <div class="semanas">
+                      <span>D</span>
+                      <span>S</span>
+                      <span>T</span>
+                      <span>Q</span>
+                      <span>Q</span>
+                      <span>S</span>
+                      <span>S</span>
+                    </div>
+                    <small>07:00</small>
+                </div>
+                <div class="routine">
+                    <b>Titulo da Rotina</b>
+                    <em>Aqui vai a descrição da rotina</em>
+                    <div class="semanas">
+                      <span>D</span>
+                      <span>S</span>
+                      <span>T</span>
+                      <span>Q</span>
+                      <span>Q</span>
+                      <span>S</span>
+                      <span>S</span>
+                    </div>
+                    <small>07:00</small>
+                </div>
+                <div class="routine">
+                    <b>Titulo da Rotina</b>
+                    <em>Aqui vai a descrição da rotina</em>
+                    <div class="semanas">
+                      <span>D</span>
+                      <span>S</span>
+                      <span>T</span>
+                      <span>Q</span>
+                      <span>Q</span>
+                      <span>S</span>
+                      <span>S</span>
+                    </div>
+                    <small>07:00</small>
+                </div>
+                <div class="routine">
+                    <b>Titulo da Rotina</b>
+                    <em>Aqui vai a descrição da rotina</em>
+                    <div class="semanas">
+                      <span>D</span>
+                      <span>S</span>
+                      <span>T</span>
+                      <span>Q</span>
+                      <span>Q</span>
+                      <span>S</span>
+                      <span>S</span>
+                    </div>
+                    <small>07:00</small>
+                </div>
           </div>
-          <div class="routines-container"></div>
         </div>
       </div>
     </div>
