feat:css do calendario finalizado

--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -80,71 +80,18 @@
                     <b>Titulo da Rotina</b>
                     <em>Aqui vai a descrição da rotina</em>
                     <div class="semanas">
-                      <span>D</span>
-                      <span>S</span>
-                      <span>T</span>
-                      <span>Q</span>
-                      <span>Q</span>
-                      <span>S</span>
-                      <span>S</span>
+                        <span>D</span>
+                        <span>S</span>
+                        <span>T</span>
+                        <span>Q</span>
+                        <span>Q</span>
+                        <span>S</span>
+                        <span>S</span>
                     </div>
-                    <small>07:00</small>
-                </div>
-                <div class="routine">
-                    <b>Titulo da Rotina</b>
-                    <em>Aqui vai a descrição da rotina</em>
-                    <div class="semanas">
-                      <span>D</span>
-                      <span>S</span>
-                      <span>T</span>
-                      <span>Q</span>
-                      <span>Q</span>
-                      <span>S</span>
-                      <span>S</span>
+                    <div class="bottom">
+                        <small>07:00</small>
+                        <i class="edit-routine fa-solid fa-pen"></i>
                     </div>
-                    <small>07:00</small>
-                </div>
-                <div class="routine">
-                    <b>Titulo da Rotina</b>
-                    <em>Aqui vai a descrição da rotina</em>
-                    <div class="semanas">
-                      <span>D</span>
-                      <span>S</span>
-                      <span>T</span>
-                      <span>Q</span>
-                      <span>Q</span>
-                      <span>S</span>
-                      <span>S</span>
-                    </div>
-                    <small>07:00</small>
-                </div>
-                <div class="routine">
-                    <b>Titulo da Rotina</b>
-                    <em>Aqui vai a descrição da rotina</em>
-                    <div class="semanas">
-                      <span>D</span>
-                      <span>S</span>
-                      <span>T</span>
-                      <span>Q</span>
-                      <span>Q</span>
-                      <span>S</span>
-                      <span>S</span>
-                    </div>
-                    <small>07:00</small>
-                </div>
-                <div class="routine">
-                    <b>Titulo da Rotina</b>
-                    <em>Aqui vai a descrição da rotina</em>
-                    <div class="semanas">
-                      <span>D</span>
-                      <span>S</span>
-                      <span>T</span>
-                      <span>Q</span>
-                      <span>Q</span>
-                      <span>S</span>
-                      <span>S</span>
-                    </div>
-                    <small>07:00</small>
                 </div>
           </div>
         </div>
