rotas rotinas prontas, conectando front e back

--- a/project/public/routine.html
+++ b/project/public/routine.html
@@ -76,7 +76,7 @@
                 <h1>Rotinas</h1>
             </div>
           <div class="routines-container">
-                <div class="routine">
+                <!-- <div class="routine">
                     <b>Titulo da Rotina</b>
                     <em>Aqui vai a descrição da rotina</em>
                     <div class="semanas">
@@ -92,7 +92,7 @@
                         <small>07:00</small>
                         <i onclick="editRoutine()" class="edit-routine fa-solid fa-pen"></i>
                     </div>
-                </div>
+                </div> -->
           </div>
         </div>
       </div>
